<resources>
    <string name="app_name">WhatsappFake</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="validar_texto">Validação</string>
    <string name="validar_descricao">Você recebeu um SMS para validação do seu número, digite o código de validação abaixo:</string>
    <string name="hint_nome">Digite o seu nome</string>
    <string name="validar_codigo">Digite o código</string>
    <string name="botao_validar">Validar</string>
    <string name="title_activity_cadastro_usuario">CadastroUsuarioActivity</string>
    <string name="item_configuracoes">Configurações</string>
    <string name="item_sair">Sair</string>
    <string name="item_pesquisa">Pesquisa</string>
    <string name="item_add">Adicionar contato</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
