<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:color="@color/textColorPrimary">

    <item
        android:id="@+id/item_configuracoes"
        android:orderInCategory="100"
        android:title="@string/item_configuracoes"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_sair"
        android:title="@string/item_sair"
        android:orderInCategory="200"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_pesquisa"
        android:title="@string/item_pesquisa"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search"/>

    <item
        android:id="@+id/item_add"
        android:title="@string/item_add"
        android:orderInCategory="400"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_person_add"/>

</menu>